css/file.css
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
    font-family: 'Montserrat', sans-serif;
    color: white;
}
.clearfix{
    content: "";
    display: table;
    clear: both;
}
h2, h4{
    color: white;
}

main{
    height: calc(100vh - 70px);
    background-color: #141922;
}
footer{
    height: 70px;
    background-color: #282828;    
}


/* main */
.display-none{
    display: none;
}
.main-container{
    height: 100%;
    width: 100%;  
}
.float{
    float:left;
    height: 100%;
}
.container-sidebar{
    width: 60px;
    background-color: black;
}
.container-spotify-content{
    width: calc(100% - 60px);
    background-color: #141922;
}
/*  */
.upgrade-now{
    text-align: right;
    padding: 30px 0px;
    background-color: rgba(0, 0, 0, .2);
}
.upgrade-now a{
    font-size: 10px;
    border: 1px solid white;
    border-radius: 20px;
    color: white;
    text-decoration: none;
    line-height: 10px;
    padding: 10px 30px;  
}
/*  */
.nav-bar{
    
    background-color:#141922;
}
.nav-bar ul{
    text-align: center;
    list-style-type: none;
    width: 100%;
}
.nav-bar li{
    display: inline-block;
    
}
.nav-bar a{
    text-decoration: none;
    color: #878787;
    font-size: 10px;
    padding: 5px;
}
.main-container-recently-played{
    padding: 15px;
}
.container-song{
    display: flex;
    flex-wrap: wrap;
    gap: 5px;
}
.container-card-song{
    text-align: center;
    width: calc(100% / 2 - 5px);
    border: 1px solid white;
}
.disc-cover img{
    width: 100%;

}




/* footer */
.footer-container{
    height: 100%;
    display: flex;
}
.footer-left-section{
    display: flex;
    align-items: center;
    border: 1px solid orange;
    width: 30%;  
}
.footer-center-section{
    width: 40%;
    display: flex;
    align-items: center;
    flex-wrap: wrap;
    border: 1px solid orange;
}
.footer-right-section{
    display: flex;
    align-items: center;
    border: 1px solid orange;
    width: 30%;  

}


.left-section-img-song img{
    width: 100%;
    
}
.left-section-img-song{
    width: 20%;
}
.left-section-author{
    width: 40%;
}
.left-section-icons{
    width: 40%;

}

.center-panel-control{
    width: 100%;
}

